--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,9 +38,8 @@ jobs:
       if: always()
       with:
         files: |
-          test-results/**/*.xml
-          test-results/**/*.trx
-          test-results/**/*.json
+          target/**/*.xml
+          target/**/*.json
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
