--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,7 +17,8 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest <!--ubuntu-latest-->
+    runs-on: windows-latest 
+    #ubuntu-latest or macos-latest
 
     steps:
     - uses: actions/checkout@v3
