--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,7 +39,7 @@ jobs:
       if: always()
       with:
         files: |
-          target/**/*.xml
+          target/Reports/Jsonreport.json
         #  target/**/*.json
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
