--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,16 +31,15 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-    - name: Test the project
-      run: mvn test
+  #  - name: Test the project
+  #   run: mvn test
       
     - name: Publish Test Results
       uses: EnricoMi/publish-unit-test-result-action/composite@v2
       if: always()
       with:
         files: |
-          target/Reports/Jsonreport.json
-        #  target/**/*.json
+          target/**/*.json
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
