--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,6 +28,9 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Clean with Maven
+      run: mvn clean
+    
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
