--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,8 +32,7 @@ jobs:
       run: mvn clean
     
     - name: Build with Maven
-      run: mvn verify
-      #run: mvn -B package --file pom.xml
+      run: mvn -B package --file pom.xml
 
   #  - name: Test the project
   #   run: mvn test
