--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,15 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     <version>4.15.0</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/io.appium/java-client -->
+<dependency>
+    <groupId>io.appium</groupId>
+    <artifactId>java-client</artifactId>
+    <version>9.0.0</version>
+</dependency>
 
+
+	 
 <dependency>
     <groupId>io.cucumber</groupId>
     <artifactId>cucumber-junit</artifactId>
