--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,15 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     <version>5.7.7</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/org.openqa.selenium/selenium -->
+<dependency>
+    <groupId>org.openqa.selenium</groupId>
+    <artifactId>selenium</artifactId>
+    <version>0.9.1</version>
+    <type>pom</type>
+</dependency>
+
+	 
 </dependencies>
 
     <build>
