--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@ xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
                 <version>2.22.0</version>
                 <configuration>
                     <testFailureIgnore>true</testFailureIgnore>
+			<useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
             </plugin>
             <plugin>
