--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,4 +19,5 @@ steps:
     jdkArchitectureOption: 'x64'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'package'
+    goals: 'clean deploy -P someprofile'
+    # goals: 'package'
