--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,11 +13,12 @@ steps:
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
-    mavenOptions: '-Xmx3072m'
+    #mavenOptions: '-Xmx3072m'
     javaHomeOption: 'JDKVersion'
-    jdkVersionOption: '1.8'
-    jdkArchitectureOption: 'x64'
+    jdkVersionOption: 'default'
+    #jdkArchitectureOption: 'x64'
+    mavenVersionOption: 'Default'
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'clean deploy -P someprofile'
+    goals: 'clean test'
     # goals: 'package'
