Updated Azure yml file

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,15 +10,10 @@ pool:
   vmImage: windows-latest
 
 steps:
-- task: Maven@3
+- task: Maven@4
+  displayName: 'Maven pom.xml'
   inputs:
-    mavenPomFile: 'pom.xml'
-    #mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion'
-    jdkVersionOption: 'default'
-    #jdkArchitectureOption: 'x64'
-    mavenVersionOption: 'Default'
-    publishJUnitResults: true
-    testResultsFiles: '**/surefire-reports/TEST-*.xml'
-    goals: 'clean test'
-    # goals: 'package'
+    goals: 'clean install'
+    testResultsFiles: 'target/**/*.xml'
+    jdkVersionOption: 1.17
+  continueOnError: true
