added publish task to Azure Pipelines yml file

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,9 @@ steps:
     testResultsFiles: 'target/**/*.xml'
     jdkVersionOption: 1.17
   continueOnError: true
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
